fix: update margin alignment for card component

--- a/wp-content/themes/astra-child/assets/css/card.css
+++ b/wp-content/themes/astra-child/assets/css/card.css
@@ -10,7 +10,7 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   width:calc(100%/4 - 20px);
   height:240px;
-  margin-left: 20px;
+  margin-right: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
